--- a/StudyPlannerSoft.csproj
+++ b/StudyPlannerSoft.csproj
@@ -17,6 +17,7 @@
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-rc.1.24451.1" />
+      <PackageReference Include="Ulid" Version="1.3.4" />
     </ItemGroup>
 
 </Project>
