--- a/StudyPlannerSoft.csproj
+++ b/StudyPlannerSoft.csproj
@@ -22,6 +22,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
       <PackageReference Include="Ulid" Version="1.3.4" />
     </ItemGroup>
 
