--- a/StudyPlannerSoft.csproj
+++ b/StudyPlannerSoft.csproj
@@ -29,4 +29,8 @@
       <PackageReference Include="Ulid" Version="1.3.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\Plans\" />
+    </ItemGroup>
+
 </Project>
