--- a/StudyPlannerSoft.csproj
+++ b/StudyPlannerSoft.csproj
@@ -26,7 +26,14 @@
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+      <PackageReference Include="Reinforced.Typings" Version="1.6.3" />
       <PackageReference Include="Ulid" Version="1.3.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="NuxtRoutesGenerator\obj\NuxtRoutesGenerator.csproj.nuget.dgspec.json" />
+      <_ContentIncludedByDefault Remove="NuxtRoutesGenerator\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="NuxtRoutesGenerator\obj\project.packagespec.json" />
     </ItemGroup>
 
 </Project>
